Update manifest file to include scripts and persistent fields.

--- a/manifest.json
+++ b/manifest.json
@@ -4,4 +4,8 @@
 	"description": "Read stuff without actually reading it?",
 	"manifest_version": 2,
 	"default_locale": "en"
+	"background":{
+		"scripts": ["main.js"],
+		"persistent": true
+	}
 }
