--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
 	"version": "1.0",
 	"description": "Read stuff without actually reading it?",
 	"manifest_version": 2,
+	"content_security_policy": "script-src 'self' https://code.jquery.com; object-src 'self'",
 	"background": {
 		"scripts": ["js/background.js"],
 		"persistent": false
