--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,15 @@
 	"version": "1.0",
 	"description": "Read stuff without actually reading it?",
 	"manifest_version": 2,
-	"content_security_policy": "script-src 'self' https://code.jquery.com; object-src 'self'",
 	"background": {
 		"scripts": ["js/background.js"],
 		"persistent": false
 	},
 	"browser_action": {
 		"default_popup": "popup.html"
-	}
+	},
+	"content_scripts": [{
+		"js": ["js/content.js"],
+		"matches": ["https://blog.lateral.io/*"]
+	}]
 }
