--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"description": "Read stuff without actually reading it?",
 	"manifest_version": 2,
 	"background": {
-		"scripts": ["js/background.js", "js/jquery-1.10.2.js"],
+		"scripts": ["js/background.js", "js/jquery-1.10.2.js","js/tippy.js"],
 		"persistent": false
 	},
 	"browser_action": {
@@ -12,7 +12,9 @@
 	},
 	"content_security_policy": "script-src 'self' https://code.jquery.com; object-src 'self'",
 	"content_scripts": [{
-		"js": ["js/jquery-1.10.2.js", "js/inject.js"],
+		"js": ["js/jquery-1.10.2.js",
+			"js/inject.js",
+		  	"js/tippy.js"],
 		"matches": ["<all_urls>"]
 	}]
 }
