--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"description": "Read stuff without actually reading it?",
 	"manifest_version": 2,
 	"background": {
-		"scripts": ["js/background.js", "js/jquery-1.10.2.js","js/tippy.js"],
+		"scripts": ["js/background.js", "js/jquery-1.10.2.js","js/tippy.js", "js/axios.js"],
 		"persistent": false
 	},
 	"browser_action": {
@@ -14,7 +14,8 @@
 	"content_scripts": [{
 		"js": ["js/jquery-1.10.2.js",
 			"js/inject.js",
-		  	"js/tippy.js"],
+		  	"js/tippy.js",
+		"js/axios.js"],
 		"matches": ["<all_urls>"]
 	}]
 }
