--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,10 @@
 		"default_popup": "popup.html"
 	},
 	"content_security_policy": "script-src 'self' https://code.jquery.com; object-src 'self'",
-	"permissions": ["contextMenus"]
+	"permissions": ["contextMenus"],
+	"content_scripts": [{
+		"js": ["js/jquery-1.10.2.js",
+			"js/tippy.js"],
+		"matches": ["<all_urls>"]
+	}]
 }
