--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,8 @@
 	"browser_action": {
 		"default_popup": "popup.html"
 	},
-	"content_security_policy": "script-src 'self' https://code.jquery.com; object-src 'self'",
-	"permissions": ["contextMenus"],
+	"content_security_policy": "script-src 'self'  https://code.jquery.com; object-src 'self'",
+	"permissions": ["contextMenus", "tabs"],
 	"content_scripts": [{
 		"js": ["js/jquery-1.10.2.js",
 			"js/tippy.js", "js/inject.js"],
