--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
 		"persistent": true
 	},
 	"browser_action": {
-		"default_popup": "popup.html"
+		"default_popup": "popup.html",
+		"default_icon": "icon.png"
 	},
 	"content_security_policy": "script-src 'self'  https://code.jquery.com; object-src 'self'",
 	"permissions": ["contextMenus", "tabs"],
