Loosen required permissions and remove unrequired code

--- a/manifest.json
+++ b/manifest.json
@@ -11,11 +11,5 @@
 		"default_popup": "popup.html",
 		"default_icon": "icon.png"
 	},
-	"content_security_policy": "script-src 'self'  https://code.jquery.com; object-src 'self'",
-	"permissions": ["contextMenus", "activeTab"],
-	"content_scripts": [{
-		"js": ["js/jquery-1.10.2.js",
-			"js/tippy.js", "js/inject.js"],
-		"matches": ["<all_urls>"]
-	}]
+	"permissions": ["activeTab"]
 }
